Fix spacing and text for example card layout

--- a/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
+++ b/client/web/src/enterprise/insights/pages/insights/creation/intro/cards/InsightCards.module.scss
@@ -45,6 +45,11 @@
     margin-bottom: 0.5rem;
 }
 
+.card-example-block {
+    margin-top: 0.5rem;
+    color: var(--body-color);
+}
+
 .card-footer {
     width: 100%;
     display: flex;
